# LargeDS_QnA

./: .dockerignore  .env.example  .gitignore  ADVANCED.md  ANY_OTHER_DIAGRAMS.md  ARCHITECTURE.md  Dockerfile  EVALUATION_REPORT.md  LICENSE  README.md  pyproject.toml  pytest.ini  read.py  render.yaml  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: ci.yml
DEMO_VIDEO/: DEMO_VIDEO_SCRIPT.txt  README.md
evaluation/: __init__.py  ablation.py  answer_quality.py  evaluate.py  metrics.py  report_generator.py  sql_eval.py  test_questions.json
scripts/: ablation.py  answer_quality.py  build_ground_truth.py  compile_requirements.py  evaluate.py  ingest.py  list_gemini_models.py  query.py  sql_eval.py
src/: __init__.py  config.py
src/agents/: __init__.py  analyst.py  critic.py  decomposer.py  graph.py  planner.py  retriever_agent.py  state.py  synthesizer.py  tools.py
src/api/: __init__.py  main.py
src/embeddings/: __init__.py  embedder.py
src/ingestion/: __init__.py  loader.py  pipeline.py  preprocessor.py
src/llm/: __init__.py  chat.py
src/observability/: __init__.py  logger.py  tracing.py
src/retrieval/: __init__.py  hybrid_retriever.py  reranker.py
src/storage/: __init__.py  bm25_store.py  sql_store.py  vector_store.py
src/ui/: __init__.py  app.py
tests/: conftest.py  test_decomposer.py  test_graph_indices.py  test_llm_chat.py  test_metrics.py  test_metrics_extended.py  test_pipeline_timeout.py  test_planner_route.py  test_preprocessor.py  test_rrf.py  test_sql_safety.py  test_synthesizer.py  test_tools.py  test_tracing.py
(+1 files in other folders)
