[project]
name = "bigdata-qna"
version = "0.1.0"
description = "Multi-agent Q&A over Amazon review corpus (FAISS, BM25, DuckDB, LangGraph)."
readme = "README.md"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "scripts", "tests", "evaluation"]
extend-exclude = ["evaluation", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false
explicit_package_bases = true
files = ["src"]
